@@ -209,7 +209,8 @@
 	* il_io.c: Changed ilDetermineTypeL to be exported.
 	* il_pcx.c: Formatting issues fixed.
 	* il_mdl.c: Added ilIsValidJp2* functions.
-	* il_io.c: Added JP2 and MDL support to ilDetermineType and ilIsValid functions.
+	* il_io.c: Added JP2, MDL and XPM support to ilDetermineType and ilIsValid functions.
 	* il_icon.c/il_png.c: Renamed color_type to ico_color_type and png_color_type to avoid name conflicts.
 	* il_iff.c: Changed all malloc->ialloc and free->ifree.  Added checks for ialloc failure.
+	* il_io.c (ilDetermineTypeL): Changed VTF check to return IL_VTF instead of the miscopied IL_SUN.
 	
